# wowprogress-companion

./: .env.example  .gitignore  README.md  compose.yaml
.github/workflows/: docker-build-push.yml
api/: Cargo.toml  Dockerfile
api/src/: main.rs
frontend/: .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  app.css
frontend/src/lib/: PullCard.svelte
frontend/src/services/: api.js
scraper/: Cargo.toml  Dockerfile
scraper/src/: main.rs
scraper/src/config/: config.rs
scraper/src/databases/: mongodb.rs
scraper/src/webclient/: webclient.rs
