[package]
name = "api"






































version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
mongodb = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
futures = "0.3"
dotenv = "0.15"
urlencoding = "2.1"
